syntax = "proto2";
package os;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/rickypai/web-template/protobuf/os";

message OS {
  optional int64 id = 1;

  optional string name = 2;

  optional google.protobuf.Timestamp created_at = 9000;

  optional google.protobuf.Timestamp modified_at = 9001;
}
